# craft

./: .gitignore  craft_detector.py  craft_utils.py  imgproc.py  requirements.txt  test.py  test_detector.py
fast_helpers/: CMakeLists.txt  fast_helpers.py
fast_helpers/src/: find_components.cpp  find_components.h
